--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
 #   - title: "Blog Posts"
 #     url: /year-archive/
     
-  - title: "CV"
+  - title: "Résumé"
     url: /files/AnirbanNath_Resume.pdf
     
 #   - title: "Guide"
