--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Anirban Nath"
   avatar           : "AnirbanNath.jpg"
-  bio              : Pursuing MS in Computer Science @ IIT Indore
+  bio              : Pursuing MS in Computer Science at Indian Institute of Technology Indore
   location         : "Indore"
   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -99,10 +99,10 @@ author:
   github           : "anirban-nath"
   google_plus      :
   keybase          :
-  instagram        : "instagram.com/hey.asl24"
+  instagram        : "hey.asl24"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "linkedin.com/in/anirban-nath-11959273"
+  linkedin         : "anirban-nath-11959273"
   orcid            : 
   pinterest        :
   soundcloud       :
