--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 locale                   : "en-US"
 title                    : "Anirban Nath"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Anirban Nath"
 description              : &description "personal description"
-url                      : https://anirban-nath.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://anirban-nath.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "anirban-nath.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
