--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
 #     url: /year-archive/
     
   - title: "Curriculum Vitae"
-    url: /files/AnirbanNath_Resume.pdf
+    url: /files/Anirban_Resume.pdf
     
 #   - title: "Guide"
 #     url: /markdown/
